[package]
name = "yamux"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0 OR MIT"
description = "Multiplexer over reliable, ordered connections"
repository = "https://github.com/paritytech/yamux"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "0.4.12"
fehler = "1.0.0-alpha.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
log = "0.4.8"
rand = "0.7.2"
tokio-codec = "0.2.0-alpha.5"
tokio-io = "0.2.0-alpha.5"

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "0.9.0"

[[bench]]
name = "concurrent"
harness = false

